--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h1>Rock Paper Scissors Game</h1>
+    <div class="container">
+        <p>Choose your hand!</p>
+        <button id="rock" value="rock">Rock</button>
+        <button id="paper" value="paper">Paper</button>
+        <button id="scissors" value="scissors">Scissors</button>    
+    </div>
+    <div class="round"></div>
+    <div class="result"></div>
+
     
+    
+
+<script src="script.js"></script>
 </body>
 </html>
+
+
